--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@onflow/fcl": "^0.0.77",
+    "@onflow/types": "^0.0.5",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
