--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@onflow/fcl": "^0.0.77",
     "@onflow/types": "^0.0.5",
+    "ahooks": "^2.10.11",
+    "axios": "^0.22.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
