--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.22.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-date-picker": "^8.3.4",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
