--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && yarn cp-libs",
+    "cp-libs": "cp ./browserified-libs/browserified-libs.js ./dist/",
     "serve": "vite preview",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -19,10 +20,16 @@
     "@onflow/types": "^0.0.5",
     "ahooks": "^2.10.11",
     "axios": "^0.22.0",
+    "buffer": "^6.0.3",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "moment": "^2.29.1",
+    "queue-microtask": "^1.2.3",
     "react": "^17.0.2",
     "react-date-picker": "^8.3.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -32,6 +39,7 @@
     "@storybook/react": "^6.3.8",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -47,10 +55,13 @@
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.8",
     "prettier": "^2.4.1",
+    "rollup-plugin-polyfill-node": "^0.7.0",
     "storybook-builder-vite": "^0.1.0",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
-    "vite": "^2.6.2"
+    "vite": "^2.6.2",
+    "stream-browserify": "^3.0.0",
+    "browserify-zlib": "^0.2.0"
   },
   "prettier": {
     "eslintIntegration": true,
@@ -63,7 +74,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
-      "eslint . --fix"
+      "eslint ./src --fix"
     ]
   }
 }
