🐛 http cors bug

--- a/browserified-libs/package.json
+++ b/browserified-libs/package.json
@@ -7,8 +7,6 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "events": "^3.3.0",
-    "process": "^0.11.10",
-    "queue-microtask": "^1.2.3"
+    "process": "^0.11.10"
   }
 }
