--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "ahooks": "^2.10.11",
     "axios": "^0.22.0",
     "buffer": "^6.0.3",
-    "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
     "moment": "^2.29.1",
-    "queue-microtask": "^1.2.3",
     "react": "^17.0.2",
     "react-date-picker": "^8.3.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "util": "^0.12.4"
+    "stream-http": "^3.2.0",
+    "util": "^0.12.4",
+    "vite-compatible-readable-stream": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -45,6 +45,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.3.6",
     "babel-loader": "^8.2.2",
+    "browserify-zlib": "^0.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -57,11 +58,10 @@
     "prettier": "^2.4.1",
     "rollup-plugin-polyfill-node": "^0.7.0",
     "storybook-builder-vite": "^0.1.0",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
-    "vite": "^2.6.2",
-    "stream-browserify": "^3.0.0",
-    "browserify-zlib": "^0.2.0"
+    "vite": "^2.6.2"
   },
   "prettier": {
     "eslintIntegration": true,
