🚧 complete basic request faucet and buy ballots

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,6 @@
 
 CHAIN_ENV=emulator
+VITE_IS_MAINNET=false
 
 VITE_FLOW_HTTP_URL=http://localhost:8080
 VITE_WALLET_DISCOVERY=http://localhost:8701/fcl/authn
