🔧 add production config

--- a/.env.testnet
+++ b/.env.testnet
@@ -11,3 +11,4 @@ VITE_PROJECT_MEMORIALS=0x8c11b7ccf9449100
 VITE_PROJECT_CCSTOKEN=0x8c11b7ccf9449100
 VITE_PROJECT_BALLOTCONTRACT=0x8c11b7ccf9449100
 VITE_PROJECT_ACTIVITYCONTRACT=0x8c11b7ccf9449100
+VITE_BASE_URL=http://test.cryptochasers.co/api
