--- a/.env.local
+++ b/.env.local
@@ -11,3 +11,4 @@ VITE_PROJECT_MEMORIALS=0x01cf0e2f2f715450
 VITE_PROJECT_CCSTOKEN=0x01cf0e2f2f715450
 VITE_PROJECT_BALLOTCONTRACT=0x01cf0e2f2f715450
 VITE_PROJECT_ACTIVITYCONTRACT=0x01cf0e2f2f715450
+VITE_BASE_URL=http://localhost:7005/api
