--- a/.env.testnet
+++ b/.env.testnet
@@ -11,4 +11,6 @@ VITE_PROJECT_MEMORIALS=0x8c11b7ccf9449100
 VITE_PROJECT_CCSTOKEN=0x8c11b7ccf9449100
 VITE_PROJECT_BALLOTCONTRACT=0x8c11b7ccf9449100
 VITE_PROJECT_ACTIVITYCONTRACT=0x8c11b7ccf9449100
-VITE_BASE_URL=http://test.cryptochasers.co/api
+VITE_BASE_URL=http://localhost:7005
+VITE_DOMAIN=http://localhost:3000
+VITE_DISCORD_CLIENT_ID=929926280118431835
