--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "name": "script-money"
   },
   "scripts": {
-    "dev": "vite",
-    "testnet": "vite --mode testnet",
+    "dev": "vite --mode testnet",
     "build": "tsc && NODE_ENV=production vite --mode testnet build && yarn cp-libs",
     "cp-libs": "cd browserified-libs && yarn && npx browserify index.js > browserified-libs.js && mv browserified-libs.js ../dist/",
     "serve": "vite preview",
