🔧 change nginx configures

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 8000;
     root   /usr/share/nginx/html;
     index  index.html index.htm;
-    server_name  test.cryptochasers.com;
+    server_name  test.cryptochasers.co;
 
     location / {
         try_files $uri $uri/ /index.html;
