--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "^17.0.2",
     "react-date-picker": "^8.3.4",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "<=5.3.2",
     "stream-http": "^3.2.0",
     "util": "^0.12.4",
     "vite-compatible-readable-stream": "^3.6.0"
@@ -39,7 +39,7 @@
     "@storybook/react": "^6.3.8",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.1",
+    "@types/react-router-dom": "<=5.3.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
