🔧 update server url

--- a/.env.testnet
+++ b/.env.testnet
@@ -11,6 +11,7 @@ VITE_PROJECT_MEMORIALS=0x8c11b7ccf9449100
 VITE_PROJECT_CCSTOKEN=0x8c11b7ccf9449100
 VITE_PROJECT_BALLOTCONTRACT=0x8c11b7ccf9449100
 VITE_PROJECT_ACTIVITYCONTRACT=0x8c11b7ccf9449100
-VITE_BASE_URL=http://localhost:7005
-VITE_DOMAIN=http://localhost:3000
+SERVER_URL=test.cryptochasers.co
+VITE_BASE_URL=http://$SERVER_URL:7005
+VITE_DOMAIN=http://$SERVER_URL:3000
 VITE_DISCORD_CLIENT_ID=929926280118431835
