--- a/.env.testnet
+++ b/.env.testnet
@@ -11,7 +11,7 @@ VITE_PROJECT_MEMORIALS=0x8c11b7ccf9449100
 VITE_PROJECT_CCSTOKEN=0x8c11b7ccf9449100
 VITE_PROJECT_BALLOTCONTRACT=0x8c11b7ccf9449100
 VITE_PROJECT_ACTIVITYCONTRACT=0x8c11b7ccf9449100
-SERVER_URL=test.cryptochasers.co
-VITE_BASE_URL=http://$SERVER_URL:7005
-VITE_DOMAIN=http://$SERVER_URL:3000
+MAIN_DOMAIN=cryptochasers.co
+VITE_BASE_URL=https://test-api.$MAIN_DOMAIN
+VITE_DOMAIN=http://test.$MAIN_DOMAIN
 VITE_DISCORD_CLIENT_ID=929926280118431835
