⬆️ resolve security problem

--- a/package.json
+++ b/package.json
@@ -20,14 +20,21 @@
     "@onflow/types": "^0.0.5",
     "ahooks": "^2.10.11",
     "axios": "^0.22.0",
+    "browserslist": "^4.16.5",
     "buffer": "^6.0.3",
+    "follow-redirects": "^1.14.8",
+    "glob-parent": "^5.1.2",
     "https-browserify": "^1.0.0",
+    "immer": "^9.0.6",
     "moment": "^2.29.1",
+    "nanoid": "^3.1.31",
+    "node-fetch": "^2.6.7",
     "react": "^17.0.2",
     "react-date-picker": "^8.3.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "<=5.3.2",
     "stream-http": "^3.2.0",
+    "trim": "^0.0.3",
     "util": "^0.12.4",
     "vite-compatible-readable-stream": "^3.6.0"
   },
@@ -54,7 +61,7 @@
     "eslint-plugin-tailwindcss": "^1.16.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
-    "postcss": "^8.3.8",
+    "postcss": "^8.2.13",
     "prettier": "^2.4.1",
     "rollup-plugin-polyfill-node": "^0.7.0",
     "storybook-builder-vite": "^0.1.0",
