🔧 update contract address and use blocto discovery

--- a/.env.testnet
+++ b/.env.testnet
@@ -3,15 +3,16 @@ CHAIN_ENV=testnet
 VITE_IS_MAINNET=false
 
 VITE_FLOW_HTTP_URL=https://access-testnet.onflow.org
-VITE_WALLET_DISCOVERY=https://fcl-discovery.onflow.org/testnet/authn
+VITE_WALLET_DISCOVERY=https://flow-wallet-testnet.blocto.app/api/flow/authn
 
 VITE_FLOW_FUNGIBLETOKEN=0x9a0766d93b6608b7
 VITE_FLOW_NONFUNGIBLETOKEN=0x631e88ae7f1d7c20
-VITE_PROJECT_MEMORIALS=0x8c11b7ccf9449100
-VITE_PROJECT_CCSTOKEN=0x8c11b7ccf9449100
-VITE_PROJECT_BALLOTCONTRACT=0x8c11b7ccf9449100
-VITE_PROJECT_ACTIVITYCONTRACT=0x8c11b7ccf9449100
-MAIN_DOMAIN=cryptochasers.co
-VITE_BASE_URL=https://test-api.$MAIN_DOMAIN
+CONTRACT_ADDRESS=0x4aa632c8f096962b
+VITE_PROJECT_MEMORIALS=${CONTRACT_ADDRESS}
+VITE_PROJECT_CCSTOKEN=${CONTRACT_ADDRESS}
+VITE_PROJECT_BALLOTCONTRACT=${CONTRACT_ADDRESS}
+VITE_PROJECT_ACTIVITYCONTRACT=${CONTRACT_ADDRESS}
+MAIN_DOMAIN=localhost
+VITE_BASE_URL=https://$MAIN_DOMAIN
 VITE_DOMAIN=http://test.$MAIN_DOMAIN
 VITE_DISCORD_CLIENT_ID=929926280118431835
