✏️ make some env variables clear

--- a/.env.testnet
+++ b/.env.testnet
@@ -12,7 +12,7 @@ VITE_PROJECT_MEMORIALS=${CONTRACT_ADDRESS}
 VITE_PROJECT_CCSTOKEN=${CONTRACT_ADDRESS}
 VITE_PROJECT_BALLOTCONTRACT=${CONTRACT_ADDRESS}
 VITE_PROJECT_ACTIVITYCONTRACT=${CONTRACT_ADDRESS}
-MAIN_DOMAIN=localhost
-VITE_BASE_URL=https://$MAIN_DOMAIN
-VITE_DOMAIN=http://test.$MAIN_DOMAIN
+MAIN_DOMAIN=cryptochasers.co
+VITE_SERVER_URL=https://test-api.$MAIN_DOMAIN
+VITE_WEB_URL=http://test.$MAIN_DOMAIN
 VITE_DISCORD_CLIENT_ID=929926280118431835
